Fixing layout on mobile

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -76,7 +76,7 @@ textarea
   display: block;
   border: 0;
   background: #f5f5f5;
-  width: 500px;
+  width: 600px;
   padding: 0.90em;
   -moz-transition: background-color 0.35s ease-in-out;
   -webkit-transition: background-color 0.35s ease-in-out;
@@ -129,7 +129,7 @@ textarea
 input.text,
 select
 {
-  margin-left: 341px;
+  margin: auto;
   line-height: 1em;
 }
 
